syntax="proto3";
package routeguide;

service RouteGuide{
  rpc GetFeature(Point) returns (Feature) {}
  rpc ListFeatures(Rectangle) returns (stream Feature) {}
  rpc RecordRoute(stream Point) returns (RouteSummary) {}
  rpc DataStreaming(stream File) returns (Stats) {}
  rpc LogCllctr(stream Log) returns (Stats) {}
  rpc FileDownload(stream File) returns (stream File) {}
}

message Stats{
  string msg=1;
}

message File{
  bytes chk=1;
}

message Point{
  int32 latitude=1;
  int32 longitude=2;
}

message Feature{
  string name=1;
  Point location=2;
}

message Rectangle{
  Point lo=1;
  Point hi=2;
}

message RouteSummary{
  int32 point_count=1;
  int32 feature_count=2;
  int32 distance=3;
  int32 elapsed_time=4;
}

message Log{
  File f=1;
  string hostname=2;
}